objects/tffa__Promotion__c.object
<CustomObject>
    <description>Promotion Codes are used to configure, identify, and track promotional opportunities. Associated with a product</description>
    <fields>
        <fullName>InterestPlanCode__c</fullName>
        <description>Interest Plan Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>InterestPlanCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the promotion is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the promotion.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique code for the promotion</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of product independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the promotion expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description enumerating key features about the promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Location of additional resource about the promotion as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the promotion is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__Description__c</columns>
        <columns>tffa__EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Sales_and_Marketing_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>